--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Cinzel&display=swap" rel="stylesheet">
     <meta
       name="description"
       content="Web site created using create-react-app"
